index.css
/* Support older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

ul,
li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

body {
  background-color: #f7f7f9;
}

/* Typography */
body,
h1,
h2,
h6,
input,
textarea,
p {
  font-family: "Poppins", Arial, Helvetica, sans-serif;
  padding: 0;
  margin: 0;
}

.header-1 {
  font-size: 48px;
  line-height: 60px;
  font-weight: bold;
}

.header-2 {
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
}

.header-3 {
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
}

.body-1 {
  font-size: 20px;
  line-height: 24px;
}

.body-2 {
  font-size: 16px;
  line-height: 24px;
  font-weight: normal;
}

.body-3 {
  font-size: 15px;
  line-height: 24px;
}

.body-4 {
  font-size: 20px;
  line-height: 28px;
  font-weight: normal;
  font-style: normal;
}

.bolder {
  font-weight: 500;
}

.bolder-2 {
  font-weight: 600;
}

.drop-shadow {
  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
}

.caption {
  font-size: 13px;
  line-height: 16px;
}

.small {
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
}

/* Colors */
.color-b300 {
  color: #7f8cff;
}

.color-b400 {
  color: #6070ff;
}

.color-n0 {
  color: #fff;
}

.color-n100 {
  color: #7a869a;
}

.color-n600 {
  color: #344563;
}

.color-n700 {
  color: #253858;
}

.color-n800 {
  color: #172b4d;
}

.color-black {
  color: #000;
}

/* Layout */
.app-bar {
  height: 48px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #fff;
}

.logo {
  height: 40px;
  width: 100px;
  margin-left: 12px;
  padding: 10px 12px 10px 12px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu-items a {
  text-decoration: none;
}

.menu-items {
  display: none;
  gap: 32px;
}

.button {
  display: flex;
  align-items: center;
  padding: 12px;
  height: 48px;
  background-color: #fff;
  color: #6070ff;
  border: 1px solid #7f8cff;
  box-sizing: border-box;
  text-decoration: none;
  border-radius: 8px;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 0.03em;
}

.link-button {
  border: 0 none;
  text-decoration: none;
}

.button:hover {
  background-color: #6070ff;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
  color: #fff;
}

.button:active {
  background-color: #2230d2;
  color: #fff;
}

.button:disabled {
  border: 1px solid #c1c7d0;
  box-sizing: border-box;
}

.button:enabled {
  border: 1px solid #7f8cff;
  box-sizing: border-box;
}

.tertiary-button {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  width: 40px;
  height: 40px;
  margin-right: 24px;
}

.headline-container {
  background-image: url(images/header-background-mobile.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: bottom right;
}

.headline {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 114px 24px;
  background-image: url(images/background-image.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top right;
}

.about-container {
  display: flex;
  flex-direction: column;
  padding: 114px 24px;
  background-image: url("images/base-about-myself.svg");
  background-repeat: no-repeat;
  background-size: cover;
}

.about {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.social-media-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  flex-wrap: wrap;
}

.social-media-icons.li {
  height: 20px;
}

.social-icon {
  width: 20px;
  height: 20px;
}

.tags,
.frame-2 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 8px;
  margin-bottom: 20px;
}

.tag {
  border-radius: 8px;
  background-color: #ebebff;
  padding: 4px 12px;
}

.action {
  padding-top: 4px;
  padding-bottom: 12px;
}

.works {
  display: grid;
  justify-content: center;
  grid-row-gap: 88px;
  padding: 114px 24px;
  background-color: transparent;
}

.card {
  background-color: #fff;
  border: 1px solid #dfe1e6;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 16px;
}

.snapshot {
  border-radius: 8px;
  width: 100%;
}

.skill-list {
  display: flex;
  flex-direction: column;
  margin: 24px 0;
}

.skill-list > li + li {
  border-bottom: solid 1px #dfe1e6;
}

.skill-item {
  display: flex;
  align-items: center;
  background-color: #f7f7f9;
  border-radius: 8px;
  margin: 12px 0;
  padding: 9px 12px;
}

.list-header {
  display: flex;
  align-items: center;
  padding: 24px 12px;
}

.separator {
  height: 1px;
  background-color: #dfe1e6;
}

footer {
  background-image: url(images/contact-me-background.svg);
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 21px;
  background-color: #fff;
}

.contact-me {
  background-image: url(images/contact-form-shapes-mobile.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: right top;
  padding: 82px 24px 45px 24px;
}

form {
  display: flex;
  flex-direction: column;
  padding-top: 50px;
  gap: 20px;
}

.text-field {
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  background-color: #fff;
  padding: 15px 38px 15px 16px;
  font-size: 17px;
  line-height: 20px;
  color: #172b4d;
  resize: none;
}

.align-center {
  text-align: center;
}

/* Spacing */
.mb-12 {
  margin-bottom: 12px;
}

.mx-12 {
  margin-left: 12px;
  margin-right: 12px;
}

.p-16 {
  padding: 16px;
}

.p-12 {
  padding: 12px;
}

.flex-text {
  display: flex;
  flex-grow: 1;
}

/* Large screen devices */
@media screen and (min-width: 600px) {
  .menu-button {
    display: none;
  }

  .menu-items {
    display: flex;
  }

  .app-bar {
    padding: 0 154px 0 155px;
  }

  .headline-container {
    background-image: url(images/header-background-desktop.svg);
    background-position: bottom left;
  }

  .headline {
    padding: 359px 260px 255px 260px;
    background-image: url(images/header-shapes-desktop.svg);
    background-position: center;
    background-size: contain;
  }

  footer {
    background-image: url(images/contact-form-background-shape-desktop.svg);
    padding: 79px 74px 48px 74px;
  }

  .contact-me {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 62px 245px 79px 245px;
    background-image: url(images/contact-form-background-shapes.svg);
  }

  .text-field {
    border-radius: 2px;
  }

  form div {
    display: flex;
    justify-content: center;
  }

  .snapshot {
    width: 544px;
    height: 448px;
  }

  .card {
    display: grid;
    grid-template-columns: auto auto;
    padding: 24px;
    justify-content: center;
  }

  .card-body {
    padding: 0 24px 0 24px;
    display: flex;
    flex-direction: column;
  }

  .works {
    gap: 142px;
  }

  .about-container {
    flex-direction: row;
    justify-content: center;
    padding: 142px;
    gap: 37px;
  }

  .about {
    gap: 12px;
    width: 100%;
    margin-top: 12px;
  }

  .skill-list {
    width: 100%;
    margin: 4px;
  }

  .skill-items {
    display: flex;
    flex-direction: row;
    gap: 20px;
  }

  .skill-item {
    flex-direction: column;
    width: 100%;
  }

  .swap {
    order: -1;
  }

  .frame-2,
  .tags {
    margin-bottom: 32px;
  }
}

